# render

./: CMakeLists.txt
render/: CMakeLists.txt  color.cpp  color.hpp  coordinate.cpp  coordinate.hpp  drawable.cpp  drawable.hpp  image.cpp  image.hpp  line.cpp  line.hpp  matrix.cpp  matrix.hpp  pixel.cpp  pixel.hpp  point-test.cpp  point.cpp  point.hpp  primitive.cpp  primitive.hpp  target.cpp  target.hpp  vector-test.cpp  vector.cpp  vector.hpp  vertex.cpp  vertex.hpp
render/debug/: CMakeLists.txt  image.cpp  image.hpp
